--- a/OpenFile/Storyboard/ContentStoryboard.storyboard
+++ b/OpenFile/Storyboard/ContentStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="17147" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15702"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17147"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,7 +17,7 @@
                         <rect key="contentRect" x="2214" y="1509" width="480" height="274"/>
                         <rect key="screenRect" x="1920" y="1200" width="1920" height="1057"/>
                         <connections>
-                            <outlet property="delegate" destination="yYk-vw-rNg" id="iYL-Vi-wSo"/>
+                            <outlet property="delegate" destination="yYk-vw-rNg" id="DgT-8k-v4y"/>
                         </connections>
                     </window>
                     <connections>
